[gd_scene format=3 uid="uid://cvcaemna745ri"]

[ext_resource type="Script" uid="uid://cq2kv4fub83r5" path="res://Scripts/Minigame/generator_heat_minigame.gd" id="1_minigame"]
[ext_resource type="FontFile" uid="uid://cky2yrbm1fxdy" path="res://Assets/Fonts/PIXELADE.TTF" id="2_font"]

[node name="GeneratorHeatMinigame" type="Control" unique_id=1293878268]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_minigame")
drop_force = 20.0
tap_boost = 2.5

[node name="Background" type="ColorRect" parent="." unique_id=1512998318]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.9)

[node name="ContentContainer" type="CenterContainer" parent="." unique_id=1721127404]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer" unique_id=467745786]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="ContentContainer/VBoxContainer" unique_id=1300146562]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 42
text = "Generator Heat"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="ContentContainer/VBoxContainer" unique_id=1918023401]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.2, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Time: 20.0"
horizontal_alignment = 1

[node name="GeneratorPanel" type="Control" parent="ContentContainer/VBoxContainer" unique_id=33544958]
custom_minimum_size = Vector2(300, 350)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="PanelBackground" type="ColorRect" parent="ContentContainer/VBoxContainer/GeneratorPanel" unique_id=252263230]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.12, 0.12, 0.15, 1)

[node name="HeatBarContainer" type="Control" parent="ContentContainer/VBoxContainer/GeneratorPanel" unique_id=412299396]
layout_mode = 1
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.35
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HeatBarFrame" type="ColorRect" parent="ContentContainer/VBoxContainer/GeneratorPanel/HeatBarContainer" unique_id=1677762198]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.3, 0.3, 0.35, 1)

[node name="HeatBar" type="Control" parent="ContentContainer/VBoxContainer/GeneratorPanel/HeatBarContainer" unique_id=1342143666]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HeatBarBg" type="ColorRect" parent="ContentContainer/VBoxContainer/GeneratorPanel/HeatBarContainer/HeatBar" unique_id=525125040]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.08, 0.08, 0.1, 1)

[node name="HeatFill" type="ColorRect" parent="ContentContainer/VBoxContainer/GeneratorPanel/HeatBarContainer/HeatBar" unique_id=251673217]
layout_mode = 0
offset_top = 150.0
offset_right = 75.0
offset_bottom = 300.0
mouse_filter = 2
color = Color(0.9, 0.5, 0.1, 1)

[node name="SuccessLine" type="ColorRect" parent="ContentContainer/VBoxContainer/GeneratorPanel/HeatBarContainer/HeatBar" unique_id=409759522]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.2
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 0.9, 0.3, 1)

[node name="SuccessLabel" type="Label" parent="ContentContainer/VBoxContainer/GeneratorPanel/HeatBarContainer/HeatBar/SuccessLine" unique_id=1478933607]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -10.0
offset_right = 35.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 0.9, 0.3, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "80%"

[node name="DangerLine" type="ColorRect" parent="ContentContainer/VBoxContainer/GeneratorPanel/HeatBarContainer/HeatBar" unique_id=253812605]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 0.8
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.9, 0.3, 0.1, 1)

[node name="DangerLabel" type="Label" parent="ContentContainer/VBoxContainer/GeneratorPanel/HeatBarContainer/HeatBar/DangerLine" unique_id=1807095712]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -10.0
offset_right = 35.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "20%"

[node name="DangerLine2" type="ColorRect" parent="ContentContainer/VBoxContainer/GeneratorPanel/HeatBarContainer/HeatBar" unique_id=1915099199]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 0.8
offset_top = -252.5
offset_bottom = -248.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.9, 0.3, 0.1, 1)

[node name="DangerLabel" type="Label" parent="ContentContainer/VBoxContainer/GeneratorPanel/HeatBarContainer/HeatBar/DangerLine2" unique_id=116792643]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -7.0
offset_right = 81.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "100% - Overload"

[node name="GeneratorImageContainer" type="Control" parent="ContentContainer/VBoxContainer/GeneratorPanel" unique_id=116047470]
layout_mode = 1
anchor_left = 0.4
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GeneratorPlaceholder" type="ColorRect" parent="ContentContainer/VBoxContainer/GeneratorPanel/GeneratorImageContainer" unique_id=1300723020]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 0.18, 0.15, 1)

[node name="GeneratorLabel" type="Label" parent="ContentContainer/VBoxContainer/GeneratorPanel/GeneratorImageContainer/GeneratorPlaceholder" unique_id=1514716278]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 0.45, 0.4, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "GENERATOR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionLabel" type="Label" parent="ContentContainer/VBoxContainer" unique_id=557846824]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Tap to begin!"
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="ContentContainer/VBoxContainer" unique_id=40687258]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "Tap rapidly to maintain heat above the green line"
horizontal_alignment = 1

[node name="TapArea" type="Control" parent="." unique_id=904736861]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
